[NAE-2452] Pre-release bugfixes
Refactor `MenuItemService` to improve parent ID comparison and optimize parent-child relationship updates.